src/packaged/visualforce-utils/currency-formatter/objects/Currency__mdt/Currency__mdt.object-meta.xml
<CustomObject>
    <description>Advanced formatting and behavior configurations for org currencies. Augments the standard currency object.</description>
    <label>Currency</label>
    <pluralLabel>Currencies</pluralLabel>
</CustomObject>