src/packaged/visualforce-utils/currency-formatter/objects/Currency__mdt/fields/CodePosition__c.field-meta.xml
<CustomField>
    <fullName>CodePosition__c</fullName>
    <description>Position of the currency ISO code when rendered in Apex or Visualforce</description>
    <inlineHelpText>Specifies where the ISO code is displayed. BEFORE the numeric value (USD 123.00) or AFTER it (123.00 USD)</inlineHelpText>
    <label>Currency Code Position</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE</fullName>
                <default>true</default>
                <label>Before</label>
            </value>
            <value>
                <fullName>AFTER</fullName>
                <label>After</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>