src/packaged/visualforce-utils/currency-formatter/objects/Currency__mdt/fields/CurrencySymbolPosition__c.field-meta.xml
<CustomField>
    <fullName>CurrencySymbolPosition__c</fullName>
    <label>Currency Symbol Position</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE</fullName>
                <default>true</default>
                <label>Before</label>
            </value>
            <value>
                <fullName>AFTER</fullName>
                <label>After</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>