src/packaged/visualforce-utils/currency-formatter/objects/Currency__mdt/fields/DecimalSeparator__c.field-meta.xml
<CustomField>
    <fullName>DecimalSeparator__c</fullName>
    <description>Separator for currencies with decimal places</description>
    <inlineHelpText>Specify the separator for the numeric value. Only effective for currencies with more than 0 decimal places.</inlineHelpText>
    <label>Decimal Separator</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>