src/packaged/visualforce-utils/currency-formatter/objects/Currency__mdt/fields/FormatLength__c.field-meta.xml
<CustomField>
    <fullName>FormatLength__c</fullName>
    <description>The default format length that is used when formatting this currency.</description>
    <inlineHelpText>Provide the default format mode that is used, when the currency is formatted. Short only prints the symbol, Medium prints ISO code and Explicit prints symbol and ISO code.</inlineHelpText>
    <label>Format Length</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SYMBOL</fullName>
                <default>true</default>
                <label>Symbol</label>
            </value>
            <value>
                <fullName>ISO_CODE</fullName>
                <label>ISO Code</label>
            </value>
            <value>
                <fullName>EXPLICIT</fullName>
                <label>Explicit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>