src/packaged/visualforce-utils/currency-formatter/objects/Currency__mdt/fields/NativeLocale__c.field-meta.xml
<CustomField>
    <fullName>NativeLocale__c</fullName>
    <description>The native locale of the country where this currency is the legal currency.</description>
    <inlineHelpText>Provide the default locale that is used to format this currency (e.g. en_US)</inlineHelpText>
    <label>Native Locale</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>