src/packaged/visualforce-utils/currency-formatter/objects/Currency__mdt/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <description>Currency symbol or abbreviation for the currency according to ISO 4217.</description>
    <inlineHelpText>Provide the symbol or abbreviation for the currency. Rendered in short and explicit format length.</inlineHelpText>
    <label>Currency Symbol</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>