src/packaged/visualforce-utils/currency-formatter/objects/Currency__mdt/fields/SymbolPosition__c.field-meta.xml
<CustomField>
    <fullName>SymbolPosition__c</fullName>
    <description>Position of the symbol when rendering short or explicit format</description>
    <inlineHelpText>Position of the symbol when rendering short or explicit format. Symbols before a numeric value are shown without spaces (in compliance with ISO-4217).</inlineHelpText>
    <label>Currency Symbol Position</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE</fullName>
                <default>true</default>
                <label>Before</label>
            </value>
            <value>
                <fullName>AFTER</fullName>
                <label>After</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>