src/packaged/visualforce-utils/currency-formatter/objects/Currency__mdt/fields/ThousandsSeparator__c.field-meta.xml
<CustomField>
    <fullName>ThousandsSeparator__c</fullName>
    <label>Thousands Separator</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>